family details is changed to family

--- a/Success.html
+++ b/Success.html
@@ -24,7 +24,7 @@
                   T.Nagar, Chennai, Tamil Nadu 600017</pre>
 </body>
 <body>
-    <h4>FAMILY DETAILS</h4>
+    <h4>FAMILY</h4>
     <table border="10px">
         <thead>
         <tr>
